# tinygl

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.md  PITCHME.md  README.md  Untitled.ipynb  african_head.tga  setup.bat  t.cppcheck  tinyrenderer.sln
examples/: 1_primitives.cpp  2_mesh.cpp  3_z_buffer.cpp  4_texture_mapping.cpp  5_perspective.cpp  6_camera.cpp  7_shading.cpp  7_shading_all.cpp  8_normal_mapping.cpp  9_phong_shading.cpp  CMakeLists.txt  app_utils.h  camera.cpp  file_conversion.cpp  paths.h  shaders.h  stb_test.cpp  tga_to_bmp.cpp
src/: CMakeLists.txt  geometry.cpp  geometry.h  main.cpp  mesh_main.cpp  model.cpp  model.h  primitives_main.cpp  tgaimage.cpp  tgaimage.h  utils.h
src/tests/: CMakeLists.txt  tests.cpp
tinygl/: CMakeLists.txt
tinygl/include/: bitmap_image.hpp  geometry.h  image.h  model.h  tgaimage.h  tinygl.h
tinygl/src/: geometry.cpp  image.cpp  model.cpp  tgaimage.cpp  tinygl.cpp
tinygl/src/tests/: CMakeLists.txt  tests.cpp
tinyrenderer/: CMakeLists.txt  tinyrenderer.vcxproj
tinyrenderer/include/: geometry.h  model.h  tgaimage.h  tinygl.h
tinyrenderer/src/: geometry.cpp  model.cpp  tgaimage.cpp  tinygl.cpp
tinyrenderer/src/tests/: CMakeLists.txt  tests.cpp
windowing/: CMakeLists.txt  window.cpp  window.h  windowing.cpp
